# bazel-kotlin-vscode-extension

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: aspect-release.yml  release.yml  test.yml
bazel/aspect/: .bazelproject  .bazelrc  BUILD.bazel  BUILD.release.bazel  MODULE.bazel  WORKSPACE  kotlin_lsp.proto  kotlin_lsp_info.bzl  maven_install.json  providers.bzl  stdlib.bzl
bazel/aspect/lsp_info_extractor/: BUILD.bazel
bazel/aspect/lsp_info_extractor/src/kotlin/brex/lsp/: ByteCodeAnalyzer.kt  ClassPathEntry.kt  LspInfoExtractor.kt  PackageInfoExtractor.kt
bazel/aspect/lsp_info_extractor/src/kotlin/org/bazelkls/: ClassPathEntry.kt  JvmNameExtractor.kt  LspInfoExtractor.kt  PackageInfoExtractor.kt
bazel/aspect/source_metadata_extractor/: BUILD.bazel
bazel/aspect/source_metadata_extractor/src/kotlin/brex/lsp/: ByteCodeAnalyzer.kt  SourceMetadataExtractor.kt
scripts/: update_changelog.sh
src/: bazelUtils.ts  config.ts  constants.ts  debugAdapter.ts  dirUtils.ts  extension.ts  githubUtils.ts  kotest.ts  languageClient.ts
src/test/: bazelUtils.test.ts  config.test.ts  githubUtils.test.ts
