java_import(
    name = "lsp_info_extractor_lib",
    jars = [
        "lsp_info_extractor.jar",
    ],
    visibility = ["//visibility:public"],
)


java_binary(
    name = "lsp_info_extractor_binary",
    main_class = "org.bazelkls.LspInfoExtractor",
    visibility = ["//visibility:public"],
    runtime_deps = [":lsp_info_extractor_lib"],
)

alias(
    name = "lsp_info_extractor",
    actual = ":lsp_info_extractor_binary",
    visibility = ["//visibility:public"],
)