load("@brex_rules_kotlin//:def.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "source-metadata-extractor-lib",
    srcs = glob(["src/kotlin/brex/lsp/*.kt"]),
    deps = [
        "@maven//:com_google_code_gson_gson",
        "@maven//:org_ow2_asm_asm",
    ],
)

java_binary(
    name = "source_metadata_extractor",
    main_class = "brex.lsp.SourceMetadataExtractor",
    visibility = ["//visibility:public"],
    runtime_deps = [":source-metadata-extractor-lib"],
)
